// Vitest Snapshot v1

exports[`generate > should generate CJS code 1`] = `
"\\"use strict\\";
var __extends =
  (this && this.__extends) ||
  (function () {
    var extendStatics = function (d, b) {
      extendStatics =
        Object.setPrototypeOf ||
        ({ __proto__: [] } instanceof Array &&
          function (d, b) {
            d.__proto__ = b;
          }) ||
        function (d, b) {
          for (var p in b)
            if (Object.prototype.hasOwnProperty.call(b, p)) d[p] = b[p];
        };
      return extendStatics(d, b);
    };
    return function (d, b) {
      if (typeof b !== \\"function\\" && b !== null)
        throw new TypeError(
          \\"Class extends value \\" + String(b) + \\" is not a constructor or null\\"
        );
      extendStatics(d, b);
      function __() {
        this.constructor = d;
      }
      d.prototype =
        b === null
          ? Object.create(b)
          : ((__.prototype = b.prototype), new __());
    };
  })();
var __assign =
  (this && this.__assign) ||
  function () {
    __assign =
      Object.assign ||
      function (t) {
        for (var s, i = 1, n = arguments.length; i < n; i++) {
          s = arguments[i];
          for (var p in s)
            if (Object.prototype.hasOwnProperty.call(s, p)) t[p] = s[p];
        }
        return t;
      };
    return __assign.apply(this, arguments);
  };
Object.defineProperty(exports, \\"__esModule\\", { value: true });
exports.getXataClient = exports.XataClient = void 0;
// Generated by Xata Codegen CODEGEN_VERSION. Please do not edit.
var client_1 = require(\\"@xata.io/client\\");
/** @typedef { import('./types').SchemaTables } SchemaTables */
/** @type { SchemaTables } */
var tables = [{ name: \\"users\\", columns: [{ name: \\"name\\", type: \\"string\\" }] }];
/** @type { import('../../client/src').ClientConstructor<{}> } */
var DatabaseClient = (0, client_1.buildClient)();
var defaultOptions = {
  databaseURL: \\"https://workspace-1234.xata.sh/db/dbname\\",
  branch: \\"feature-branch\\",
};
/** @typedef { import('./types').DatabaseSchema } DatabaseSchema */
/** @extends DatabaseClient<DatabaseSchema> */
var XataClient = /** @class */ (function (_super) {
  __extends(XataClient, _super);
  function XataClient(options) {
    return (
      _super.call(
        this,
        __assign(__assign({}, defaultOptions), options),
        tables
      ) || this
    );
  }
  return XataClient;
})(DatabaseClient);
exports.XataClient = XataClient;
var instance = undefined;
/** @type { () => XataClient } */
var getXataClient = function () {
  if (instance) return instance;
  instance = new XataClient();
  return instance;
};
exports.getXataClient = getXataClient;
"
`;

exports[`generate > should generate Deno code 1`] = `
"// Generated by Xata Codegen CODEGEN_VERSION. Please do not edit.
import { buildClient } from \\"npm:@xata.io/client@latest\\";
import type {
  BaseClientOptions,
  SchemaInference,
  XataRecord,
} from \\"npm:@xata.io/client@latest\\";

const tables = [
  { name: \\"users\\", columns: [{ name: \\"name\\", type: \\"string\\" }] },
] as const;

export type SchemaTables = typeof tables;
export type InferredTypes = SchemaInference<SchemaTables>;

export type Users = InferredTypes[\\"users\\"];
export type UsersRecord = Users & XataRecord;

export type DatabaseSchema = {
  users: UsersRecord;
};

const DatabaseClient = buildClient();

const defaultOptions = {
  databaseURL: \\"https://workspace-1234.xata.sh/db/dbname\\",
  branch: \\"feature-branch\\",
};

export class XataClient extends DatabaseClient<DatabaseSchema> {
  constructor(options?: BaseClientOptions) {
    super({ ...defaultOptions, ...options }, tables);
  }
}

let instance: XataClient | undefined = undefined;

export const getXataClient = () => {
  if (instance) return instance;

  instance = new XataClient();
  return instance;
};
"
`;

exports[`generate > should ignore CJS for TS code 1`] = `
"// Generated by Xata Codegen CODEGEN_VERSION. Please do not edit.
import { buildClient } from \\"@xata.io/client\\";
import type {
  BaseClientOptions,
  SchemaInference,
  XataRecord,
} from \\"@xata.io/client\\";

const tables = [
  { name: \\"users\\", columns: [{ name: \\"name\\", type: \\"string\\" }] },
] as const;

export type SchemaTables = typeof tables;
export type InferredTypes = SchemaInference<SchemaTables>;

export type Users = InferredTypes[\\"users\\"];
export type UsersRecord = Users & XataRecord;

export type DatabaseSchema = {
  users: UsersRecord;
};

const DatabaseClient = buildClient();

const defaultOptions = {
  databaseURL: \\"https://workspace-1234.xata.sh/db/dbname\\",
  branch: \\"feature-branch\\",
};

export class XataClient extends DatabaseClient<DatabaseSchema> {
  constructor(options?: BaseClientOptions) {
    super({ ...defaultOptions, ...options }, tables);
  }
}

let instance: XataClient | undefined = undefined;

export const getXataClient = () => {
  if (instance) return instance;

  instance = new XataClient();
  return instance;
};
"
`;

exports[`generate > should inject branch if passed 1`] = `
"// Generated by Xata Codegen CODEGEN_VERSION. Please do not edit.
import { buildClient } from \\"@xata.io/client\\";
import type {
  BaseClientOptions,
  SchemaInference,
  XataRecord,
} from \\"@xata.io/client\\";

const tables = [
  { name: \\"users\\", columns: [{ name: \\"name\\", type: \\"string\\" }] },
] as const;

export type SchemaTables = typeof tables;
export type InferredTypes = SchemaInference<SchemaTables>;

export type Users = InferredTypes[\\"users\\"];
export type UsersRecord = Users & XataRecord;

export type DatabaseSchema = {
  users: UsersRecord;
};

const DatabaseClient = buildClient();

const defaultOptions = {
  databaseURL: \\"https://workspace-1234.xata.sh/db/dbname\\",
  branch: \\"feature-branch\\",
};

export class XataClient extends DatabaseClient<DatabaseSchema> {
  constructor(options?: BaseClientOptions) {
    super({ ...defaultOptions, ...options }, tables);
  }
}

let instance: XataClient | undefined = undefined;

export const getXataClient = () => {
  if (instance) return instance;

  instance = new XataClient();
  return instance;
};
"
`;

exports[`generate > should respect case naming 1`] = `
"// Generated by Xata Codegen CODEGEN_VERSION. Please do not edit.
import { buildClient } from \\"@xata.io/client\\";
import type {
  BaseClientOptions,
  SchemaInference,
  XataRecord,
} from \\"@xata.io/client\\";

const tables = [
  {
    name: \\"teams_Like\\",
    columns: [
      { name: \\"name-test\\", type: \\"string\\" },
      { name: \\"labels_Test\\", type: \\"multiple\\" },
      { name: \\"ownerFoo\\", type: \\"link\\", link: { table: \\"users-foo\\" } },
    ],
  },
  {
    name: \\"users-foo\\",
    columns: [
      { name: \\"email-random\\", type: \\"email\\" },
      { name: \\"full_name\\", type: \\"string\\" },
      { name: \\"teamLike\\", type: \\"link\\", link: { table: \\"teams_Like\\" } },
    ],
  },
] as const;

export type SchemaTables = typeof tables;
export type InferredTypes = SchemaInference<SchemaTables>;

export type TeamsLike = InferredTypes[\\"teams_Like\\"];
export type TeamsLikeRecord = TeamsLike & XataRecord;

export type UsersFoo = InferredTypes[\\"users-foo\\"];
export type UsersFooRecord = UsersFoo & XataRecord;

export type DatabaseSchema = {
  teams_Like: TeamsLikeRecord;
  \\"users-foo\\": UsersFooRecord;
};

const DatabaseClient = buildClient();

const defaultOptions = {
  databaseURL: \\"https://workspace-1234.xata.sh/db/dbname\\",
};

export class XataClient extends DatabaseClient<DatabaseSchema> {
  constructor(options?: BaseClientOptions) {
    super({ ...defaultOptions, ...options }, tables);
  }
}

let instance: XataClient | undefined = undefined;

export const getXataClient = () => {
  if (instance) return instance;

  instance = new XataClient();
  return instance;
};
"
`;

exports[`generate > should respect numbers in names 1`] = `
"// Generated by Xata Codegen CODEGEN_VERSION. Please do not edit.
import { buildClient } from \\"@xata.io/client\\";
import type {
  BaseClientOptions,
  SchemaInference,
  XataRecord,
} from \\"@xata.io/client\\";

const tables = [
  {
    name: \\"1teams-case\\",
    columns: [
      { name: \\"2nameCase\\", type: \\"string\\" },
      { name: \\"3Labels\\", type: \\"multiple\\" },
    ],
  },
] as const;

export type SchemaTables = typeof tables;
export type InferredTypes = SchemaInference<SchemaTables>;

export type $1teamsCase = InferredTypes[\\"1teams-case\\"];
export type $1teamsCaseRecord = $1teamsCase & XataRecord;

export type DatabaseSchema = {
  \\"1teams-case\\": $1teamsCaseRecord;
};

const DatabaseClient = buildClient();

const defaultOptions = {
  databaseURL: \\"https://workspace-1234.xata.sh/db/dbname\\",
};

export class XataClient extends DatabaseClient<DatabaseSchema> {
  constructor(options?: BaseClientOptions) {
    super({ ...defaultOptions, ...options }, tables);
  }
}

let instance: XataClient | undefined = undefined;

export const getXataClient = () => {
  if (instance) return instance;

  instance = new XataClient();
  return instance;
};
"
`;

exports[`generate > should respect numbers in names 2`] = `
"// Generated by Xata Codegen CODEGEN_VERSION. Please do not edit.
import { buildClient } from \\"@xata.io/client\\";
const tables = [
  {
    name: \\"1teams-case\\",
    columns: [
      { name: \\"2nameCase\\", type: \\"string\\" },
      { name: \\"3Labels\\", type: \\"multiple\\" },
    ],
  },
];
const DatabaseClient = buildClient();
const defaultOptions = {
  databaseURL: \\"https://workspace-1234.xata.sh/db/dbname\\",
};
export class XataClient extends DatabaseClient {
  constructor(options) {
    super({ ...defaultOptions, ...options }, tables);
  }
}
let instance = undefined;
export const getXataClient = () => {
  if (instance) return instance;
  instance = new XataClient();
  return instance;
};
"
`;

exports[`generate > should respect numbers in names 3`] = `
"import type {
  BaseClientOptions,
  SchemaInference,
  XataRecord,
} from \\"@xata.io/client\\";
declare const tables: readonly [
  {
    readonly name: \\"1teams-case\\";
    readonly columns: readonly [
      {
        readonly name: \\"2nameCase\\";
        readonly type: \\"string\\";
      },
      {
        readonly name: \\"3Labels\\";
        readonly type: \\"multiple\\";
      }
    ];
  }
];
export declare type SchemaTables = typeof tables;
export declare type InferredTypes = SchemaInference<SchemaTables>;
export declare type $1teamsCase = InferredTypes[\\"1teams-case\\"];
export declare type $1teamsCaseRecord = $1teamsCase & XataRecord;
export declare type DatabaseSchema = {
  \\"1teams-case\\": $1teamsCaseRecord;
};
declare const DatabaseClient: any;
export declare class XataClient extends DatabaseClient<DatabaseSchema> {
  constructor(options?: BaseClientOptions);
}
export declare const getXataClient: () => XataClient;
export {};
"
`;
